--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is BY."
-header-img: "img/post-bg-rwd.jpg"
+title: "About One-Punch-Man"
+description: "Sorry! I just need a punch!"
+header-img: "man-1.jpg"
 ---
 
 <!-- Language Selector -->
@@ -15,14 +15,15 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>世界上，沒有一拳解決不了的事，如果有，那就兩拳。</p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>这只是一个叫<strong>一拳超人（One-Punch-Man）</strong>的垃圾blog。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
+    <p>创建这个blog的目的只是因为我记忆力不好而已。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>好记性不如烂笔头！多写多练总是好的！相信自己！奥利给！</p>
+
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。这是我的<a href="https://github.com1423248687">👉GitHub</a> 。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
@@ -31,8 +32,8 @@ header-img: "img/post-bg-rwd.jpg"
     <ul>
         <li><a href="https://github.com">GitHub</a></li>
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
+<!--         <li><a href="http://huangxuan.me/">Hux</a></li> 
+        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li> -->
     </ul>
 </div>
 
