--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About One-Punch-Man"
 description: "Sorry! I just need a punch!"
-header-img: "man-1.jpg"
+header-img: "img/man-1.jpg"
 ---
 
 <!-- Language Selector -->
